<resources>
    <string name="app_name">Weighbridge</string>
    <string name="ticket_list">Ticket List</string>
    <string name="new_ticket">Ticket</string>
    <string name="add_ticket">Add New Ticket</string>
    <string name="edit_ticket">Edit Ticket</string>
    <string name="save">Save</string>
    <string name="input_outbound_weight">Input Outbound Weight</string>
    <string name="outbound_weight">Outbound Weight</string>
    <string name="input_inbound_weight">Input Inbound Weight</string>
    <string name="inbound_weight">Inbound Weight</string>
    <string name="input_time">Input Time (HH:MM)</string>
    <string name="time">Time</string>
    <string name="input_date">Input Date (DD/MM/YYYY)</string>
    <string name="date">Date</string>
    <string name="input_license_number">Input License Number (XX 1234 XXX)</string>
    <string name="license_number">License Number</string>
    <string name="input_driver_name">Input Driver Name</string>
    <string name="name">Name</string>
    <string name="net_weight">Net Weight</string>
    <string name="_0">0</string>
    <string name="edit">Edit</string>
    <string name="driver_name">Driver Name</string>
    <string name="weighting_date">Weighting Date</string>
    <string name="close">Close</string>
    <string name="filter_ticket">Filter Ticket</string>
    <string name="short_ticket">Sort Ticket</string>
    <string name="input_keyword">Input keyword</string>
    <string name="empty_state_ticket">Upps there are no tickets available, let\'s create a new one</string>
    <string name="sort">Sort</string>
    <string name="separator">|</string>
    <string name="filter">Filter</string>
    <string name="zero">0</string>
    <string name="delete">Delete</string>
    <string name="date_time">Date / Time</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="use_filter">Use Filter</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="choose_sorting">Choose Sorting</string>
    <string name="there_is_no_ticket_available">there is no ticket available</string>
    <string name="keyword_cannot_be_empty">Keyword cannot be empty</string>
    <string name="set_date_and_time">%1$s   |   %2$s</string>
    <string name="set_tonnage">%1$s Ton</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="select_inbound_date">Select Inbound date</string>
    <string name="select_inbound_time">Select Inbound time</string>
    <string name="set_hour_and_minute">%1$s:%2$s</string>
    <string name="ticket_saved_successfully">Ticket Saved Successfully!</string>
    <string name="invalid_license_number">Invalid License Number, Expected Format XX 1234 XXX</string>
    <string name="invalid_weight">Invalid Weight</string>
    <string name="ticket_changed_successfully">Ticket Changed Successfully!</string>
    <string name="datepicker">datePicker</string>
    <string name="filtersheet">filterSheet</string>
    <string name="shortsheet">shortSheet</string>
    <string name="ticketdetailsheet">ticketDetailSheet</string>
    <string name="set_ton">%1$s Ton</string>
    <string name="outbound_weight_is_below_inbound_weight">Outbound weight is below Inbound weight</string>
    <string name="outbound_weight_is_bigger_than_inbound_weight">Outbound weight is bigger than Inbound weight</string>
    <string name="ticket_deleted_successfully">Ticket Deleted Successfully!</string>
</resources>